--- a/assets/style.css
+++ b/assets/style.css
@@ -66,3 +66,52 @@ p1 {
 p1 {
   font-size: 20px;
 }
+
+/*  ==== WELCOME PAGE STYLE CODE BELOW ==== */
+.welcome-body {
+  background-image: url("https://images.unsplash.com/photo-1505775561242-727b7fba20f0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80");
+}
+
+.welcome-container {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.welcomeHtag {
+  color: #ffdb58;
+  text-shadow: 5px 2px black;
+}
+
+.welcome-message {
+  color: white;
+  font-size: 30px;
+  font-family: "Times New Roman", Times, serif;
+  margin: 40px;
+  text-shadow: 2px 2px black;
+}
+
+.quote,
+.forrestGump {
+  color: #dbb21c;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Times New Roman", Times, serif;
+  margin: 80px 40px 10px;
+  font-weight: bold;
+  text-shadow: 2px 2px black;
+}
+
+.forrestGump {
+  margin: 0;
+}
+
+.btn {
+  background-color: #ffdb58;
+  width: 200px;
+  height: 80px;
+  margin: 40px;
+  font-size: 35px;
+  text-shadow: 2px 2px grey;
+}
