--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 body {
+  background-image: url("https://images.unsplash.com/photo-1505775561242-727b7fba20f0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80");
   background-color: black;
 }
 
@@ -67,10 +68,14 @@ p1 {
   font-size: 20px;
 }
 
-/*  ==== WELCOME PAGE STYLE CODE BELOW ==== */
-.welcome-body {
-  background-image: url("https://images.unsplash.com/photo-1505775561242-727b7fba20f0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80");
+.hide {
+  display: none;
 }
+
+/*  ==== WELCOME PAGE STYLE CODE BELOW ==== */
+/* .welcome-body {
+  /* background-image: url("https://images.unsplash.com/photo-1505775561242-727b7fba20f0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80"); */
+
 
 .welcome-container {
   margin: 0;
