--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 body {
   background-image: url("https://images.unsplash.com/photo-1505775561242-727b7fba20f0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80");
-  background-color: black;
 }
 
 .logo-img {
@@ -15,64 +14,61 @@ body {
   margin-bottom: 40px;
 }
 
-.movieSearch {
-  color: #ffdb58;
-  font-size: 30px;
-  text-decoration: underline;
-  text-align: center;
-}
-
-.filterGneres h3 {
-  color: #ffdb58;
-  text-align: center;
-}
-
-.filterGenres {
-  border: solid;
-  border-color: #ffdb58;
-}
-
-#id-searchBtn {
+/* Styles the search button only */
+#searchBtn {
   color: black;
   border-color: #ffdb58;
   border: solid;
 }
 
-.options {
-  border: solid;
-  border-color: #ffdb58;
-}
-
-.options h3 {
-  color: #ffdb58;
-  text-align: center;
-}
-
+/* Styles the different genres plust search by title */
 ul label {
   color: #ffdb58;
-  text-align: center;
 }
 
-label {
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
+/* styles the container where the search block and search button are contained */
+#searchdiv {
+    text-align: center;
 }
 
-h3,
-p1 {
-  color: white;
+/* styles the search block */
+#movieInput {
+  height: 50px;
+  width: 400px;
+  border: solid;
+  border-color: black;
 }
 
-p1 {
+/* styles the search button */
+#searchBtn {
+  height: 50px;
+  width: 100px;
   font-size: 20px;
 }
 
+/* Styles the movie's name and year, and plot */
+h3,
+p {
+  color: white;
+}
+
+/* Styles only the movie's plot */
+p {
+  font-size: 20px;
+  margin: 20px;
+}
+
+/* styles the displayed movie images */
+.movie-col {
+  height: 600px;
+}
+
+/* this class is used to hide or show the Welcome page and the Main Movie search page */
 .hide {
   display: none;
 }
 
-/*  ==== WELCOME PAGE STYLE CODE BELOW ==== */
+/*  ==== WELCOME-PAGE STYLE CODE BELOW ==== */
 
 .welcome-container {
   margin: 0;
